[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { path = "../protocol" }
tokio = { version = "1.17.0", features = ["full"] }
crossbeam = "0.8.1"
futures-lite = "1.12.0"
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
