[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" } 

tokio = { version = "1.17.0", features = ["full"] }
crossbeam-queue = "0.3.5"

toml = "0.5.8"
serde = { version = "1.0.136", features = ["derive"] }
rand = "0.8.5"

noise = "0.7.0"

log = "0.4.16"
fern = "0.6.0"