[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
protocol = { path = "../protocol" }
tokio = { version = "1.17.0", features = ["full"] }
crossbeam = "0.8.1"
log = "0.4.16"
noise = "0.7.0"
bevy_mod_picking = { path = "../../../fork/bevy_mod_picking" }