[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = { version = "0.10.0", features = ["serde"] }
crossbeam = "0.8.1"
tokio = { version = "1.17.0", features = ["full"] }
protocol = { path = "../protocol" }
serde_json = "1.0.79"
lazy_static = "1.4.0"
