[package]
name = "vox_to_structure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { path = "../protocol" }
serde = { version = "1.0.136", features = ["derive"] }
dot_vox = "4.1.0"
bincode = "1.3.3"
